# cmake-starter

./: CMakeLists.txt  README.md
src/: World.cpp  main.cpp
